--- a/src/index.css
+++ b/src/index.css
@@ -3,19 +3,28 @@
 @tailwind utilities;
 
 :root {
-    font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
-    line-height: 1.5;
-    font-weight: 400;
-  
-    color-scheme: light dark;
-    color: rgba(0, 0, 0, 0.87);
-    background-color: #F1F8FA;
-  
-    font-synthesis: none;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
+  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  line-height: 1.5;
+  font-weight: 400;
+
+  color-scheme: light dark;
+  color: rgba(31, 41, 55);
+  background-color: #f1f8fa;
+
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 .flex-center {
-    @apply justify-center items-center
+  @apply justify-center items-center;
+}
+
+.field-rounded {
+  @apply py-2 p-3 rounded-lg;
+}
+
+.field-border {
+  @apply border-2 border-gray-300 border-opacity-80 bg-white focus:outline-none;
 }
