--- a/src/index.css
+++ b/src/index.css
@@ -35,7 +35,7 @@
 }
 
 .field {
-  @apply mt-1 mb-3 field-rounded field-border;
+  @apply mt-1 mb-3 field-rounded field-border text-gray-500;
 }
 
 .link {
