--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -17,6 +17,10 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+body {
+  min-width: 360px;
+}
+
 .flex-center {
   @apply justify-center items-center;
 }
@@ -47,11 +51,11 @@
 }
 
 .header-icon-size {
-  @apply w-5 h-5;
+  @apply w-4 h-4 sm:w-5 sm:h-5;
 }
 
 .circle-sm {
-  @apply text-sm font-semibold w-6 h-6 rounded-full flex flex-center;
+  @apply text-xs sm:text-sm font-semibold w-5 h-5 sm:w-6 sm:h-6 rounded-full flex flex-center;
 }
 
 .task-action-icon {
